# cpp-cmake-template

./: CMakeLists.txt  README.md
EngineApp/: CMakeLists.txt
EngineApp/include/: MyModule.cppm
EngineApp/src/: MyModule.cpp  main.cpp
EngineCore/: CMakeLists.txt
EngineCore/include/: EngineCoreModule.cppm  engine.h
EngineCore/src/: EngineCoreModule.cpp  engine.cpp
examples/example1/: main.cpp
examples/example2/src/: main.cpp
src/: main.cpp
